--- a/app/webroot/views/gallery.html
+++ b/app/webroot/views/gallery.html
@@ -1,3 +1,10 @@
-<div id="imgView" style="height: 600px; width: 100%; background-color: ivory;">
+<div id="imgView" style="width: 100%; height: 98%; overflow: hidden; -ms-overflow-y: visible; display: block;">
+
+    <div id="masonry" class="masonry" style="display: block!important; ">
+        <div class="grid-sizer"></div>
+
+    </div>
+
+    <div ng-show="picsLoader" class="dataLoader" style="border-color: white; display: inline-block"><span ></span></div>
 
 </div>
