--- a/app/webroot/views/add_case.html
+++ b/app/webroot/views/add_case.html
@@ -57,8 +57,8 @@
 
                         <div class="col1-3">
                             <select placeholder="select source" id="imageSources" ng-change="launchImageFinder()" ng-model="selectedImageSourceItem">
+                                <option   value="none"> </option>
                                 <option   value="flickr"> Flickr</option>
-                                <option   value="instaGram">Instagram</option>
                             </select>
                         </div>
                     </div>
@@ -103,7 +103,8 @@
                                   <option value="4">Marche</option>
                                   <option value="8">Rue</option>
                                   <option value="16">Taxi</option>
-                                  <option value="32">other</option>
+                                  <option value="32">Maison</option>
+                                  <option value="64">other</option>
                               </select>
                         </div>
                     </div>
@@ -135,6 +136,7 @@
                                    <option value="1">Open</option>
                                    <option value="2">Pending</option>
                                    <option value="4">Unresolved</option>
+                                   <option value="16">Closed</option>
                                    <option value="8">Unknown</option>
                                </select>
                         </div>
