--- a/app/webroot/css/main.scss
+++ b/app/webroot/css/main.scss
@@ -682,12 +682,13 @@ color: #383838;
   opacity: 0;
   cursor: pointer;
   z-index: 21;
+  height: 100%;
  //background-color: #EE5757;
   //background: linear-gradient(45deg, rgba(248,80,50,1) 0%, rgba(240,47,23,0.47) 53%, rgba(245,238,237,0) 100%);
   @include media(">=tablet")
   {
     //width: 5%;
-    height: 100%;
+
     margin-top: 20px;
     font-size: 30px;
     min-width: 50px;
@@ -696,6 +697,21 @@ color: #383838;
   }
   @include media("<tablet"){
     color: rgba(18, 18, 28, 1);
+  }
+}
+
+.hframe .left .swipeRight{
+  top: 0px;
+  width: 20px;
+  height: 100%;
+  left: 0px;
+  position: absolute;
+  z-index: 100;
+  background-color: rgba(255, 255, 0, 0.04);
+  @include media("<=tablet") {
+    top: 65px;
+    width: 50px;
+    background-color: rgba(255, 255, 0, 0);
   }
 }
 
@@ -708,11 +724,12 @@ color: #383838;
   opacity: 0;
   cursor: pointer;
   z-index: 21;
+  height: 100%;
   //background-color: #EE5757;
   @include media(">=tablet")
   {
     //width: 5%;
-    height: 100%;
+
     margin-top: 20px;
     font-size: 30px;
     min-width: 50px;
@@ -721,6 +738,21 @@ color: #383838;
   }
   @include media("<tablet"){
     color: rgba(18, 18, 28, 1);
+  }
+}
+
+.hframe .right .swipeLeft{
+  top: 0px;
+  width: 20px;
+  height: 100%;
+  right: 0px;
+  position: absolute;
+  z-index: 100;
+  background-color: rgba(255, 255, 0, 0.04);
+  @include media("<=tablet") {
+    top: 65px;
+    width: 50px;
+    background-color: rgba(255, 255, 0, 0);
   }
 }
 
@@ -1369,13 +1401,28 @@ button {
 }
 
 #imgView{
-  //-webkit-scrollbar{ width: 0 !important };
+  height: 150%;
+  width: 100%;
+  overflow: auto;
+  -ms-overflow-y: visible;
+  display: block;
+  height: 98%;
+  @include media(">tablet")  {
+    width: 100%;  overflow: hidden; -ms-overflow-y: visible; display: block;
+    height: 98%;
+  }
+
 }
 
-::-webkit-scrollbar {
-  width: 0 !important;
-}
 
+
+@media only screen and (min-width:1200px) {
+  ::-webkit-scrollbar {
+
+    width: 0 !important;
+
+  }
+}
 /******************DataViz  ********/
 .vizAreayearly{
   background-color: #aecc38;
@@ -1418,4 +1465,45 @@ button {
 #genderStackedLineChart{
   width: 100%;
   height: 100%;
+}
+
+.rightscrolley{
+  width: 25px;
+  height: 96%;
+  margin-top: 3px;
+  position: absolute;
+  right: 1px;
+  bottom: 3px;
+  background-color: maroon;
+
+}
+
+.rightscrolley .top{
+position: absolute;
+  width: 100%;
+  height: 45%;
+  top: 0px;
+  background-color: #002a80;
+}
+
+.rightscrolley .bottom{
+  width: 100%;
+  height: 45%;
+  bottom: 0px;
+  background-color: wheat;
+}
+/******************************Mobile only********************************************/
+
+.mobileOnly{
+  display: none;
+  @include media("<=tablet"){
+    display: inline-block;
+  }
+}
+
+.notDesktop{
+  display: none;
+  @include media("<=tablet"){
+    display: inline-block;
+  }
 }
