--- a/app/webroot/views/gallery.html
+++ b/app/webroot/views/gallery.html
@@ -1,10 +1,15 @@
-<div id="imgView" style="width: 100%; height: 98%; overflow: hidden; -ms-overflow-y: visible; display: block;">
-
+<div id="imgView" style="">
+<!--ng-mousedown="scroolup()" ng-mouseup="scroolend()" -->
     <div id="masonry" class="masonry" style="display: block!important; ">
         <div class="grid-sizer"></div>
 
     </div>
 
     <div ng-show="picsLoader" class="dataLoader" style="border-color: white; display: inline-block"><span ></span></div>
+   <!-- <div class="notDesktop rightscrolley" ng-mousedown="scrooldwn()" ng-mouseup="scroolend()">
+        <span class="top" ></span>
+        <span class="bottom"></span>
+
+    </div>-->
 
 </div>
